clang/test/BSC/Negative/NullabilityCheck/bsc_nullability/bsc_nullability.cbs
// RUN: %clang_cc1 -verify %s

_Safe int *_Borrow _Nullable foo1(int* _Borrow a);
_Safe void test1(void) {
    int a = 10;
    int *_Borrow p1 = foo1(&_Mut a); // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    int *_Borrow _Nullable p2 = foo1(&_Mut a);
}

void test2(void) {
  int *_Borrow p = nullptr;
  _Unsafe {
    int *_Borrow p2 = nullptr;
  }
}

struct S {
    int a;
};
_Safe void test3(void) {
    struct S *_Borrow _Nullable p = nullptr;
    if (p != nullptr) {
        p->a = 10;
    } else {
        p->a = 20; // expected-error {{cannot access member through nullable pointer}}
    }
    p->a = 30; // expected-error {{cannot access member through nullable pointer}}
}
